# stonefish

./: .gitignore  .readthedocs.yaml  CMakeLists.txt  README.md  Stonefish.workspace  StonefishConfig.cmake  doxygen  stonefish.pc.in  version.h.in
.github/: FUNDING.yml
.github/workflows/: build-stonefish.yml  docker-export.yml
ResourceManager/: CMakeLists.txt  ResourceHandle.h  embed_resource.cpp
Stonefish.xcodeproj/: project.pbxproj
Stonefish.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Stonefish.xcodeproj/xcuserdata/zbuffer.xcuserdatad/xcschemes/: AcrobotTest Release.xcscheme  AcrobotTest.xcscheme  ConsoleTest.xcscheme  FallingTest.xcscheme  FloatingTest.xcscheme  FlyingTest.xcscheme  JointsTest.xcscheme  RollingTest.xcscheme  SlidingTest.xcscheme  Stonefish.xcscheme  UnderwaterTest.xcscheme  xcschememanagement.plist
Tests/: CMakeLists.txt
Tests/AcrobotTest/: AcrobotTest.project  AcrobotTestApp.cpp  AcrobotTestApp.h  AcrobotTestManager.cpp  AcrobotTestManager.h  main.cpp
Tests/Acrover/: AcroverDriveController.cpp  AcroverDriveController.h  AcroverP2PController.cpp  AcroverP2PController.h  AcroverPathFollowingController.cpp  AcroverPathFollowingController.h  AcroverSimApp.cpp  AcroverSimApp.h  AcroverSimManager.cpp  AcroverSimManager.h  AcroverSpeedController.cpp  AcroverSpeedController.h  AcroverTiltController.cpp  AcroverTiltController.h  main.cpp
Tests/CableTest/: CableTestApp.cpp  CableTestApp.h  CableTestManager.cpp  CableTestManager.h  main.cpp
Tests/CameraTest/: CameraTestManager.cpp  CameraTestManager.h  main.cpp
Tests/ConfigurableThrusterModels/: plot_rotor_models.cpp  plot_thruster_models.cpp
Tests/ConfigurableThrusterTest/: ConfigurableThrusterTestManager.cpp  ConfigurableThrusterTestManager.h  main.cpp
Tests/ConsoleTest/: ConsoleTest.project  ConsoleTestApp.cpp  ConsoleTestApp.h  ConsoleTestManager.cpp  ConsoleTestManager.h  main.cpp
Tests/Data/: console_test.scn  cylinder_tilt.stl  gainfit.oct  girona500auv.scn  girona500auv_console.scn  girona500auv_full.scn  parser_test.scn  simple.scn  test.oct  underwater_pipe.scn  underwater_test.scn
Tests/FallingTest/: FallingTest.project  FallingTestApp.cpp  FallingTestApp.h  FallingTestManager.cpp  FallingTestManager.h  main.cpp
Tests/FloatingTest/: FloatingTest.project  FloatingTestManager.cpp  FloatingTestManager.h  main.cpp
Tests/FluidDynamicsTest/: FluidDynamicsTestApp.cpp  FluidDynamicsTestApp.h  FluidDynamicsTestManager.cpp  FluidDynamicsTestManager.h  main.cpp
Tests/FlyingTest/: FlyingTest.project  FlyingTestManager.cpp  FlyingTestManager.h  main.cpp
Tests/JointsTest/: JointsTest.project  JointsTestApp.cpp  JointsTestApp.h  JointsTestManager.cpp  JointsTestManager.h  main.cpp
Tests/LearningTest/: LearningTestManager.cpp  LearningTestManager.h  main.cpp
Tests/ParserTest/: ParserTestManager.cpp  ParserTestManager.h  main.cpp
Tests/RollingTest/: MonoWheelLateral.cpp  MonoWheelLateral.h  MonoWheelPathFollowing.cpp  MonoWheelPathFollowing.h  RollingTestApp.cpp  RollingTestApp.h  RollingTestManager.cpp  RollingTestManager.h  main.cpp
Tests/SlidingTest/: SlidingTest.project  SlidingTestApp.cpp  SlidingTestApp.h  SlidingTestManager.cpp  SlidingTestManager.h  main.cpp
Tests/UnderwaterTest/: UnderwaterTest.project  UnderwaterTestApp.cpp  UnderwaterTestApp.h  UnderwaterTestManager.cpp  UnderwaterTestManager.h  main.cpp
docker/: Dockerfile
docs/: actuators.rst  animated.rst  bodies.rst  building.rst  cables.rst  changelog.rst  comms.rst  conf.py  environment.rst  index.rst  install.rst  license.rst  materials.rst  overview.rst  pyproject.toml  requirements.txt  robots.rst  scenario.rst  sensors.rst  special.rst  theory.rst
scripts/: build-stonefish.sh
